--- a/students/src/main/resources/application.properties
+++ b/students/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8080
 spring.application.name=STUDENT-SERVICE
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+server.error.include-message=always
