--- a/students/src/main/resources/application.properties
+++ b/students/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=STUDENT-SERVICE
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 server.error.include-message=always
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:C:/Users/Public/microservicesArchitectureDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
