--- a/courses/src/main/resources/application.properties
+++ b/courses/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #spring.application.name=COURSE-SERVICE
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+server.error.include-message=always
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:C:/Users/Public/microservicesArchitectureCoursesDB
