Feature of obtaining info about students of course

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -8,3 +8,7 @@ zuul.prefix=/api
 zuul.routes.studentDto.path=/students/**
 zuul.routes.studentDto.service-id=STUDENT-SERVICE
 zuul.routes.studentDto.strip-prefix=false
+
+zuul.routes.coursesDto.path=/courses/**
+zuul.routes.coursesDto.service-id=COURSE-SERVICE
+zuul.routes.coursesDto.strip-prefix=false
