--- a/courses/src/main/resources/application.properties
+++ b/courses/src/main/resources/application.properties
@@ -10,4 +10,9 @@ server.error.include-message=always
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.username=sa
 
+
 spring.data.mongodb.uri=***
+
+spring.rabbitmq.addresses=***
+
+
